Adding screencast at the beginning of docs.

--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -2,6 +2,18 @@
 
 =head1 Installing and Configuring Dada Mail
 
+=begin html
+
+<iframe 
+	width="853" 
+	height="480" 
+	src="https://www.youtube.com/embed/s5vTHUpC-n8?rel=0" 
+	frameborder="0" 
+	allowfullscreen></iframe>
+
+=end html
+
+
 =head1 Overview
 
 Most of the configuration of Dada Mail is done by just filling out the form in the included Dada Mail Installer. 
@@ -392,10 +404,6 @@ To do this, you will need to:
 When asked if you want to B<Install> or, B<Upgrade> your Dada Mail, choose, B<Upgrade> and make sure the text box labeled, B<Current .dada_files Location> is filled in with the correct absolute path to the parent directory that holds your C<.dada_files> directory. Click the button labeled, B<Continue...>, to bring you back to the Configuration screen. Make your changes on this screen (make sure to select, B<Create a new .dada_config file> on the top of the form). 
 
 Once you've completed your configuration changes, click the B<Configure Dada Mail!> button as before, and follow the same directions you did during the installation, for the next screen. 
-
-=head2 Screencast
-
-Todo
 
 =head2 Command Line Interface
 
